--- a/jms-client/src/main/resources/application-jms-client.properties
+++ b/jms-client/src/main/resources/application-jms-client.properties
@@ -1,20 +1,4 @@
 ###########################
-# datasource, 设置数据库JDBC连接
-###########################
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
-spring.datasource.username=miaosha
-spring.datasource.password=1
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.max-active=200
-spring.datasource.min-idle=10
-spring.datasource.max-idle=20
-# initial-size如果太大可能会出现 ORA-12519 错误
-spring.datasource.initial-size=20
-spring.datasource.test-on-borrow=true
-spring.datasource.test-on-return=true
-spring.datasource.validation-query=select 1 from dual
-
-###########################
 # artemis 的配置
 ###########################
 artemis.uri=tcp://localhost:61616?type=CF\
@@ -26,5 +10,5 @@ artemis.uri=tcp://localhost:61616?type=CF\
   &reconnectAttempts=-1
 artemis.username=miaosha
 artemis.password=miaosha
-artemis.queue=jms.MiaoSha.request
-artemis.topic=jms.MiaoSha.response
+artemis.queue=MiaoSha.request
+artemis.topic=MiaoSha.response
