--- a/jms-server/src/main/resources/application-jms-server.properties
+++ b/jms-server/src/main/resources/application-jms-server.properties
@@ -1,19 +1,33 @@
 ###########################
 # datasource, 设置数据库JDBC连接
 ###########################
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.url=jdbc:oracle:thin:@oracle-xe:1521:xe
 spring.datasource.username=miaosha
-spring.datasource.password=1
+spring.datasource.password=miaosha
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.max-active=200
-spring.datasource.min-idle=10
-spring.datasource.max-idle=20
+spring.datasource.max-active=50
+spring.datasource.min-idle=50
+spring.datasource.max-idle=50
 # initial-size如果太大可能会出现 ORA-12519 错误
-spring.datasource.initial-size=20
+spring.datasource.initial-size=50
 spring.datasource.test-on-borrow=true
 spring.datasource.test-on-return=true
 spring.datasource.validation-query=select 1 from dual
 
+###########################
+# artemis 的配置
+###########################
+artemis.uri=tcp://localhost:61616?type=CF\
+  &useGlobalPools=false\
+  &threadPoolMaxSize=10\
+  &retryInterval=2000\
+  &retryIntervalMultiplier=1.5\
+  &maxRetryInterval=30000\
+  &reconnectAttempts=-1
+artemis.username=miaosha
+artemis.password=miaosha
+artemis.queue=MiaoSha.request
+artemis.topic=MiaoSha.response
 
 ###########################
 # 内部请求队列相关配置
