--- a/jms-server/pom.xml
+++ b/jms-server/pom.xml
@@ -24,6 +24,11 @@
     </dependency>
 
     <dependency>
+      <groupId>com.oracle</groupId>
+      <artifactId>ojdbc7</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.fasterxml.uuid</groupId>
       <artifactId>java-uuid-generator</artifactId>
     </dependency>
