add: 添加DisruptorJmsSender的内部队列长度的配置

--- a/jms-client/src/main/resources/application-jms-client.properties
+++ b/jms-client/src/main/resources/application-jms-client.properties
@@ -12,3 +12,8 @@ artemis.username=miaosha
 artemis.password=miaosha
 artemis.queue=MiaoSha.request
 artemis.topic=MiaoSha.response
+
+###########################
+# disruptor jms sender 的队列长度
+###########################
+jms-sender.ring-buffer-size=65536
