--- a/jms-server/src/main/resources/application-jms-server.properties
+++ b/jms-server/src/main/resources/application-jms-server.properties
@@ -30,11 +30,16 @@ artemis.queue=MiaoSha.request
 artemis.topic=MiaoSha.response
 
 ###########################
+# disruptor jms sender 的队列长度
+###########################
+jms-sender.ring-buffer-size=65536
+
+###########################
 # 内部请求队列相关配置
 ###########################
 
 # 请求队列长度, 值必须是2的次方
-request-disruptor.jvm-queue-size=8192
+request-disruptor.jvm-queue-size=65536
 
 ###########################
 #
@@ -63,11 +68,11 @@ request-disruptor.jvm-queue-size=8192
 
 # 商品库存更新SQL
 item-update.proc.num=1
-item-update.proc.sql-buffer-size=1000
+item-update.proc.sql-buffer-size=500
 item-update.proc.queue-size=4096
 
 # 订单插入SQL
 order-insert.proc.num=1
-order-insert.proc.sql-buffer-size=1000
+order-insert.proc.sql-buffer-size=500
 order-insert.proc.queue-size=4096
 
