添加application.properties遗漏的注释

--- a/jms-client/src/main/resources/application-jms-client.properties
+++ b/jms-client/src/main/resources/application-jms-client.properties
@@ -14,6 +14,6 @@ artemis.queue=MiaoSha.request
 artemis.topic=MiaoSha.response
 
 ###########################
-# disruptor jms sender 的队列长度
+# disruptor jms sender 的队列长度，必须是2的次方
 ###########################
-jms-sender.ring-buffer-size=65536
+jms-sender.ring-buffer-size=131072
