--- a/jms-server/src/main/resources/application-jms-server.properties
+++ b/jms-server/src/main/resources/application-jms-server.properties
@@ -30,7 +30,7 @@ artemis.queue=MiaoSha.request
 artemis.topic=MiaoSha.response
 
 ###########################
-# disruptor jms sender 的队列长度
+# disruptor jms sender 的队列长度,必须是2的次方
 ###########################
 jms-sender.ring-buffer-size=65536
 
@@ -39,7 +39,7 @@ jms-sender.ring-buffer-size=65536
 ###########################
 
 # 请求队列长度, 值必须是2的次方
-request-disruptor.jvm-queue-size=65536
+request-disruptor.jvm-queue-size=131072
 
 ###########################
 #
@@ -69,10 +69,10 @@ request-disruptor.jvm-queue-size=65536
 # 商品库存更新SQL
 item-update.proc.num=1
 item-update.proc.sql-buffer-size=500
-item-update.proc.queue-size=4096
+item-update.proc.queue-size=65536
 
 # 订单插入SQL
 order-insert.proc.num=1
 order-insert.proc.sql-buffer-size=500
-order-insert.proc.queue-size=4096
+order-insert.proc.queue-size=65536
 
